--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,3 +21,4 @@
 @import './components/page-footer';
 @import './components/about';
 @import './utils/placeholders';
+@import './components/modal';
