--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,7 +2,7 @@
     <div class="modal">
       <button class="modal-butten" data-modal-close>
         <svg class="modal-svg">
-          <use href="./images/sprite.svg#icon-close"></use>
+          <use href="./images/modal-sprite.svg#icon-close"></use>
         </svg>
       </button>
       <form class="modal-form">
@@ -13,26 +13,26 @@
               <label for="name">Name</label>
               <input class=" modal-input" type="text" name="name" id="name" autocomplete="off">
               <svg class="moda-svg">
-                <use href="./images/sprite.svg#icon-name"></use>
+                <use href="./images/modal-sprite.svg#icon-name"></use>
               </svg>
             </div>
             <div class="modal-form-fild">
               <label for="tel">Telephone</label>
               <input class="modal-input" type="tel" name="tel" id="tel" autocomplete="off">
               <svg class="moda-svg">
-                <use href="./images/sprite.svg#icon-tel"></use>
+                <use href="./images/modal-sprite.svg#icon-tel"></use>
               </svg>
             </div>
             <div class="modal-form-fild">
               <label for="mail">Mail</label>
               <input class="modal-input" type="email" name="email" id="mail" autocomplete="off">
               <svg class="moda-svg">
-                <use href="./images/sprite.svg#icon-email"></use>
+                <use href="./images/modal-sprite.svg#icon-email"></use>
               </svg>
             </div>
             <div class="modal-form-fild">
               <label for="comment">Comment</label>
-              <textarea class="textarea" resize="none" name="comment" id="comment" placeholder="Введите текст" rows="10" autocomplete="off"></textarea>
+              <textarea class="textarea" resize="none" name="comment" id="comment" placeholder="" rows="10" autocomplete="off"></textarea>
             </div>
           </div>
         </div>
